--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-# Bisht9887.github.io
+<!DOCTYPE html>
+<html>
+<head>
+<title>Title of the document</title>
+</head>
+
+<body>
+The content of the document......
+</body>
+
+</html>
