--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
                 <h1>
                     I am Ankit Bisht <br>
-                    I am a graphic & UI/UX <br>
-                    designer based in Somewhere.
+                    I am a Software Engineer/UX <br>
+                    based in Florida.
                 </h1>
 
                 <div class="home-content__buttons">
