--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                 <h1>
                     I am Ankit Bisht <br>
-                    I am a Software Engineer/UX <br>
+                    I am a Software Engineer<br>
                     based in Florida.
                 </h1>
 
